# advanced-auto-watering

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig
components/sht30/: idf_component.yml  sht30.c  sht30.h
main/: CMakeLists.txt  GlobalConfig.cpp  GlobalConfig.h  GlobalConfigTable.cpp  Kconfig.projbuild  TimeManger.c  TimeManger.h  WateringManager.cpp  WateringManager.h  WateringManagerWrapper.cpp  WateringManagerWrapper.h  app_main.c  example.c  http_request_handle.c  mqtt_credential.h.example
main/assets/: my_index.html
