idf_component_register(SRCS "http_request_handle.c" "app_main.c"
                        INCLUDE_DIRS "."
                        EMBED_FILES assets/css/bootstrap.min.css
                                    assets/js/bootstrap.bundle.min.js
                                    assets/js/chart.min.js
                                    assets/my_index.html)              
